--- a/GAB.csproj
+++ b/GAB.csproj
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\GamerWeb3\packages\Obfuscar.2.2.33\build\obfuscar.props" Condition="Exists('..\..\GamerWeb3\packages\Obfuscar.2.2.33\build\obfuscar.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -46,9 +45,14 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ADO.NETException.cs" />
     <Compile Include="CodeFirst.cs" />
     <Compile Include="Comparer.cs" />
     <Compile Include="ConditionalClauseException.cs" />
+    <Compile Include="Events.cs" />
+    <Compile Include="Helper.cs" />
+    <Compile Include="IPersistenceObjectBase.cs" />
+    <Compile Include="IPersistenceObjectDataAccess.cs" />
     <Compile Include="Parameter.cs" />
     <Compile Include="PersistenceClassAttribute.cs" />
     <Compile Include="PersistenceObject.cs" />
@@ -58,25 +62,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider.cs" />
     <Compile Include="ProviderConfiguration.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="obfuscar.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <Compile Include="TableNameRepresentNotExistsException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>"$(Obfuscar)" obfuscar.xml</PostBuildEvent>
-  </PropertyGroup>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\..\GamerWeb3\packages\Obfuscar.2.2.33\build\obfuscar.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\GamerWeb3\packages\Obfuscar.2.2.33\build\obfuscar.props'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
